// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Anonymys rockey 1`] = `
<div
  className="AnonymysRockey1-{{ hash }}"
>
  Yo
</div>
`;

exports[`rockey named shortcut and named extend 1`] = `
<button
  className="PrimaryButton-{{ hash }} MyButton-{{ hash }}"
/>
`;

exports[`rockey named shortcut and named extend with custom className 1`] = `
<button
  className="BaseButton-{{ hash }} custom-class-name"
/>
`;

exports[`rockey named shortcut and named extend with custom className 2`] = `
<button
  className="YourButton-{{ hash }} m-background-{{ hash }}-1 custom-class-name"
/>
`;

exports[`rockey named shortcut and named extend with custom className 3`] = `
<button
  className="PrimaryYourButton-{{ hash }} YourButton-{{ hash }} m-background-{{ hash }}-2 custom-class-name"
/>
`;

exports[`rockey named shortcut and named extend with custom className 4`] = `
<button
  className="ChildYourButton-1-{{ hash }} YourButton-{{ hash }} m-background-{{ hash }}-3 custom-class-name"
/>
`;

exports[`rockey named shortcut and named extend with custom className 5`] = `
<button
  className="SuperButton-{{ hash }} ChildYourButton-1-{{ hash }} YourButton-{{ hash }} m-background-{{ hash }}-2 custom-class-name"
/>
`;

exports[`rockey shortcut 1`] = `
<button
  className="ShortcutButton1-{{ hash }}"
/>
`;

exports[`rockey shortcut and extend 1`] = `
<button
  className="ChildShortcutButton2-1-{{ hash }} ShortcutButton2-{{ hash }}"
/>
`;

exports[`rockey shortcut and named extend 1`] = `
<button
  className="ShortcutButton3-{{ hash }}"
/>
`;

exports[`rockey shortcut and named extend 2`] = `
<button
  className="SuperPrimaryButton-{{ hash }} ShortcutButton3-{{ hash }}"
/>
`;

exports[`rockey shortcut and named extend 3`] = `
<button
  className="ChildSuperPrimaryButton-1-{{ hash }} SuperPrimaryButton-{{ hash }} ShortcutButton3-{{ hash }}"
/>
`;

exports[`rockey with displayName 1`] = `
<div
  className="MyDiv-{{ hash }}"
>
  Yo
</div>
`;
